--- a/PersistanceGenerator/build.gradle
+++ b/PersistanceGenerator/build.gradle
@@ -16,27 +16,14 @@ repositories {
 
     mavenLocal()
 
-    maven { url "http://maven.samagames.net/public/" }
+    maven { url "http://maven.elmakers.com/repository/" }
 
-    maven {
-        url "http://maven.samagames.net/developpers/"
-        credentials {
-            username sguser
-            password sgpass
-        }
-    }
+  
 
-    maven {
-        url "http://maven.samagames.net/network/"
-        credentials {
-            username sguser
-            password sgpass
-        }
-    }
 }
 
 dependencies {
-    compile group: 'net.samagames', name: 'PersistanceAPI', version: '1.1.0'
+    compile fileTree(dir: '../libs', include: '*.jar')
     compile group: 'com.squareup', name: 'javapoet', version: '1.6.1'
 }
 
